--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,13 +1,21 @@
-<app-banner src="assets/imagens/banner-homepage.png" alt="Banner da aplicação Jornada-Milhas"></app-banner>
-<app-container>
-    <h2>Promoções</h2>
-    <div class="card-wrapper">
-        <app-card-busca></app-card-busca>
-        <app-card-busca></app-card-busca>
-        <app-card-busca></app-card-busca>
-        <app-card-busca></app-card-busca>
-        <app-card-busca></app-card-busca>
-        <app-card-busca></app-card-busca>
-    </div>
-    <h2>Depoimentos</h2>
-</app-container>
+<section class="homepage">
+    <app-banner src="assets/imagens/banner-homepage.png" alt="Banner da aplicação Jornada-Milhas"></app-banner>
+    <app-container>
+        <h2>Promoções</h2>
+        <app-form-busca></app-form-busca>
+        <div class="card-wrapper">
+            <app-card-busca></app-card-busca>
+            <app-card-busca></app-card-busca>
+            <app-card-busca></app-card-busca>
+            <app-card-busca></app-card-busca>
+            <app-card-busca></app-card-busca>
+            <app-card-busca></app-card-busca>
+        </div>
+        <h2>Depoimentos</h2>
+        <div class="card-wrapper">
+            <app-card-depoimento></app-card-depoimento>
+            <app-card-depoimento></app-card-depoimento>
+            <app-card-depoimento></app-card-depoimento>
+        </div>
+    </app-container>
+</section>
