--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -11,7 +11,7 @@
     .mat-toolbar {
         background-color: black;
         color: white;
-        padding: 0 256px;
+        padding: 0;
     }
 
     .mat-mdc-outlined-button:not(:disabled) {
