--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,12 @@
 <section class="homepage">
-    <app-banner src="assets/imagens/banner-homepage.png" alt="Banner da aplicação Jornada-Milhas"></app-banner>
+    <app-banner src="assets/imagens/banner-homepage.png" alt="Banner da aplicação Jornada"></app-banner>
     <app-container>
-        <h2>Promoções</h2>
         <app-form-busca></app-form-busca>
+        <h2>Promoções</h2>
         <div class="card-wrapper">
+            <app-card-busca></app-card-busca>
+            <app-card-busca></app-card-busca>
+            <app-card-busca></app-card-busca>
             <app-card-busca></app-card-busca>
             <app-card-busca></app-card-busca>
             <app-card-busca></app-card-busca>
@@ -18,4 +21,5 @@
             <app-card-depoimento></app-card-depoimento>
         </div>
     </app-container>
+    <app-banner src="assets/imagens/banner-homepage-rodape.png" alt="Banner da aplicação Jornada"></app-banner>
 </section>
