--- a/src/app/shared/modal/modal.component.html
+++ b/src/app/shared/modal/modal.component.html
@@ -3,70 +3,42 @@
     <div mat-dialog-content>
         <div class="selecao-idade">
             <ul>
+                <li><strong>Adultos</strong></li>
+                <li>(Acima de 12 anos)</li>
                 <li>
-                    Adultos
-                </li>
-                <li>
-                    (Acima de 12 anos)
-                </li>
-                <li>
-                    <button class="decremento" mat-mini-fab>
-                        <img src="assets/icones/do_not_disturb_on.png" alt="Operdador de subtração">
-                    </button>
-                    <span>
-                        1
-                    </span>
-                    <button class="incremento" mat-mini-fab>
-                        <img src="assets/icones/add_circle.png" alt="Operdador de adi~ção">
-                    </button>
+                    <app-botao-controle operacao="decrementar"></app-botao-controle>
+                    <span>1</span>
+                    <app-botao-controle operacao="incrementar"></app-botao-controle>
                 </li>
             </ul>
             <ul>
+                <li><strong>Crianças</strong></li>
+                <li>(Entre 2 e 11 anos)</li>
                 <li>
-                    Crianças
-                </li>
-                <li>
-                    (Entre 2 e 11 anos)
-                </li>
-                <li>
-                    <button class="decremento" mat-mini-fab>
-                        <img src="assets/icones/do_not_disturb_on.png" alt="Operdador de subtração">
-                    </button>
-                    <span>
-                        1
-                    </span>
-                    <button class="incremento" mat-mini-fab>
-                        <img src="assets/icones/add_circle.png" alt="Operdador de adi~ção">
-                    </button>
+                    <app-botao-controle operacao="decrementar"></app-botao-controle>
+                    <span>1</span>
+                    <app-botao-controle operacao="incrementar"></app-botao-controle>
                 </li>
             </ul>
             <ul>
+                <li><strong>Bebês</strong></li>
+                <li>(Até 2 anos)</li>
                 <li>
-                    Bebês
-                </li>
-                <li>
-                    (Até 2 anos)
-                </li>
-                <li>
-                    <button class="decremento" mat-mini-fab>
-                        <img src="assets/icones/do_not_disturb_on.png" alt="Operdador de subtração">
-                    </button>
-                    <span>
-                        1
-                    </span>
-                    <button class="incremento" mat-mini-fab>
-                        <img src="assets/icones/add_circle.png" alt="Operdador de adi~ção">
-                    </button>
+                    <app-botao-controle operacao="decrementar"></app-botao-controle>
+                    <span>1</span>
+                    <app-botao-controle operacao="incrementar"></app-botao-controle>
                 </li>
             </ul>
         </div>
         <div class="selecao-categoria">
-
-            Categoria
-
+            <p><strong>Categoria</strong></p>
+            <mat-chip-listbox aria-label="Seleção de passagens">
+                <mat-chip-option selected>1 adulto</mat-chip-option>
+                <mat-chip-option>Econômica</mat-chip-option>
+            </mat-chip-listbox>
         </div>
     </div>
-    <div mat-dialog-actions>
-        <button mat-button mat-dialog-close>Close</button>
+    <div mat-dialog-actions class="modal-actions">
+        <button color="primary" mat-flat-button mat-dialog-close>BUSCAR</button>
     </div>
 </section>
